Mon Dec 20 14:52:03 GMT 2004 (trog)
-----------------------------------
  * libclamav/chmunpack.c: relax over stringent offset checks.
			Explicitly cast some long long constants.

  * libclamav/ole2_extract.c: remove variable size array declaration.

Mon Dec 20 02:57:29 CET 2004 (tk)
---------------------------------
  * libclamav/others.c: added cli_filecopy()

Mon Dec 20 02:32:30 CET 2004 (tk)
---------------------------------
  * improved OS/2 support (thanks to Yuri Dario <mc6530*mclink.it>)

Sun Dec 19 17:01:56 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Correctly warn that --max_childen must be given in SESSION
		mode if LocalSocket is used and MaxThreads isn't given in
		clamd.conf. max_children is needed to know how many sessions
		to initiate to clamd(s)

Sun Dec 19 13:51:20 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Further work on the non-parsing version.
  * clamav-milter:	Fix compilation error in non SESSION mode

Sun Dec 19 12:46:23 CET 2004 (tk)
---------------------------------
  * contrib/clamdwatch: updated to 0.7

Sun Dec 19 03:12:50 CET 2004 (tk)
---------------------------------
  * sigtool: fixed compilation error

Sun Dec 19 03:00:48 CET 2004 (tk)
---------------------------------
  * libclamav: improved zip support

Sun Dec 19 02:09:50 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: updated (Dale Enterprise L.L.C)

Sat Dec 18 16:32:51 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Removed the need for a extra (short lived) parse tree
		on some mail formats. This will help memory and performance
		in some scenarios

Thu Dec 16 15:31:45 GMT 2004 (njh)
----------------------------------
  * libclamav:	Added some test software that decodes emails without parsing
			them first. It is not enabled by default, use at your
			own risk and look at the comments first.
		Cleared a few problems in the decoding algorithms found when
			testing the above code
