@@ -44,10 +44,10 @@ Example
 #AllowSupplementaryGroups
 
 # Use DNS to verify virus database version. Freshclam uses DNS TXT records
-# to verify database and software versions. We highly recommend enabling
-# this option.
-# Default: disabled
-DNSDatabaseInfo current.cvd.clamav.net
+# to verify database and software versions. With this directive you can change
+# the database verification domain.
+# Default: enabled, pointing to current.cvd.clamav.net
+#DNSDatabaseInfo current.cvd.clamav.net
 
 # Uncomment the following line and replace XY with your country
 # code. See http://www.iana.org/cctld/cctld-whois.htm for the full list.
