@@ -1,3 +1,7 @@
+Tue Dec 21 04:11:48 CET 2004 (tk)
+---------------------------------
+  * freshclam: DNSDatabaseInfo: optimised and hardcoded
+
 Mon Dec 20 14:52:03 GMT 2004 (trog)
 -----------------------------------
   * libclamav/chmunpack.c: relax over stringent offset checks.
